test/resources/type-checking/bad/Downcasting.cc
int main() {
  double d = 2.0;

  // Downcasting is disallowed
  int x = (int)d;

  return x;
}
